frontend/src/scenes/authentication/Login.scss
@import '~/vars';
@import './bridgePagesShared';

.bridge-page.login {
    .helper-links {
        text-align: center;
        .lhs {
            float: left;
        }
        &.cloud {
            .rhs {
                float: right;
            }
        }
    }

    @media screen and (max-width: $sm) {
        .helper-links {
            .lhs,
            .rhs {
                float: unset;
            }
            a {
                display: block;
                width: 100%;
                padding-top: 4px;
            }
        }
    }
}

